--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header {
 
 .sidebar img.profile-pic {
     width: 150px;
-    border: 5px solid black;
+    border: 5px solid white;
     display: block;
     margin: 20px auto;
 }
